# QuantRabbit

./: .gitignore  AGENTS.md  ARCHIVE_POINTER.md  CLAUDE.md  CLAUDE_ja.md  Dockerfile  Dockerfile.news_summarizer_runner  LEGACY_ARCHIVE_PATH.txt  Makefile  README.legacy  README.md  SYSTEM_DIAGNOSIS_20260317.md  SYSTEM_REBUILD_CHARTER.md  TODO_EXIT_ALIGNMENT.md  TODO_EXIT_TECHNICAL.md  insight_client.py  main.py  mypy.ini  news_pipeline_local.py  oanda_test.py  order_manager.py  pyproject.toml  pytest.ini  quantrabbit_patch.diff  requirements.txt  show_positions.XXXXXX.py  sitecustomize.py  startup_script.sh  test_feedparser.py  tmp_gcp_location.txt  tmp_gcp_project_id.txt  tmp_gcp_pubsub_topic.txt  tmp_news_bucket_name.txt  tmp_oanda_account_id.txt  tmp_oanda_token.txt  tuning_presets.yaml
.cache/: token_usage.json
.claude/: settings.json
.codex/: config.toml
.githooks/: pre-commit
addons/: system.py
advisors/: __init__.py  exit_advisor.py  focus_override.py  news_bias.py  partial_reduction.py  rr_ratio.py  stage_plan.py  strategy_confidence.py  volatility_bias.py
allocator/: __init__.py  bandit.py
analysis/: 2025-10-14_candles.txt  2025-10-14_summary.txt  adaptive_sl_tp.py  auto_canary.py  bq_stats.py  chart_story.py  closed_trades_analysis.csv  daily_summary.csv  focus_decider.py  forecast_improvement_worker.py  forecast_sklearn.py  gpt_decider.py  gpt_exit_advisor.py  gpt_prompter.py  improvement_plan_2025-10-16.md  instrument_selector.py  kaizen.py  learning.py  llm_client.py  local_decider.py  ma_projection.py  macro_snapshot_builder.py  macro_state.py  (+33 more)
(+3147 files in other folders)
